--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   text-align: center;
   /* margin-top: */
-  background-image: url(images/elec.jpg);
+  background-image: url(elec.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 100%;
