--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   text-align: center;
   /* margin-top: */
-  background-image: url(elec.jpg);
+  background-image: url(images/elec.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 100%;
@@ -29,8 +29,7 @@ h2{
   text-shadow: 2px 3px 4px rgb(0, 0, 0);
     font-size: 30px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    text-align: left;
-    margin-left: 80px;
+    text-align: center;
 }
 div {
   /* background-color: aliceblue; */
@@ -43,19 +42,15 @@ div {
   border-radius: 8px;
 }
 p{
-    color: yellow;
-    text-align: left;
-    margin-left: 80px;
-    margin-right:40px ;
+    color: rgb(184, 184, 0);
+    text-align: center;   
   text-shadow: 2px 3px 4px rgb(0, 0, 0);
 
     
 }
 li{
-   color: rgb(0, 255, 94);
-    text-align: left;
-    margin-left: 50px;
-    margin-right:30px ; 
+   color: rgb(137, 137, 137);
+    text-align: center; 
   text-shadow: 2px 3px 4px rgb(0, 0, 0);
 
 }
